--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,6 @@ export(get_male_ogives)
 export(get_specimen_data)
 export(set_variables)
 import(RODBC)
-import(data.table)
 import(dplyr)
 import(getPass)
 import(keyring)
@@ -17,6 +16,7 @@ import(lifecycle)
 import(tibble)
 import(tidyr)
 import(tidyverse)
+importFrom(data.table,data.table)
 importFrom(magrittr,"%>%")
 importFrom(purrr,map2)
 importFrom(rlang,.data)
