update namespace and description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,8 @@ Package: crabPack
 Title: Calculate Bering Sea Crab CPUE, Abundance, and Biomass
 Version: 0.0.0.9000
 Authors@R: 
-    person("Shannon", "Hennessey", , "shannon.hennessey@noaa.gov", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0002-6737-1362"))
-Description: This package contains functions to calculate standard NOAA AFSC SAP summer bottom trawl survey data products (CPUE, Abundance, and Biomass) for the Eastern Bering Sea Shelf (1975-present) and Northern Bering Sea Shelf (2010-present).
+    person("Shannon", "Hennessey", , "shannon.hennessey@noaa.gov", role = c("aut", "cre"))
+Description: This package contains functions to calculate standard NOAA AFSC Shellfish Assessment Program summer bottom trawl survey data products (CPUE, Abundance, and Biomass) for the Eastern Bering Sea Shelf (1975-present) and Northern Bering Sea Shelf (2010-present).
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -23,7 +22,8 @@ Imports:
     magrittr,
     purrr,
     rlang,
-    gapindex
+    gapindex,
+    utils
 Depends: 
     R (>= 4.0.0)
 LazyData: true
