--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export("%>%")
 export(calc_bioabund)
 export(calc_cpue)
 export(get_connected)
-export(get_male_ogives)
+export(get_male_maturity)
 export(get_specimen_data)
 export(set_crab_category)
 export(set_variables)
