--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,6 @@ Imports:
     RODBC,
     getPass,
     stats,
-    tidyverse,
-    tibble,
     tidyr,
     dplyr,
     data.table,
@@ -21,9 +19,7 @@ Imports:
     lifecycle,
     magrittr,
     purrr,
-    rlang,
-    gapindex,
-    utils
+    gapindex
 Depends: 
     R (>= 4.0.0)
 LazyData: true
