add metadata documentation to bioabund/cpue; remove purrr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,5 @@ import(keyring)
 import(lifecycle)
 import(tidyr)
 importFrom(data.table,data.table)
-importFrom(purrr,map2)
 importFrom(stats,aggregate)
+importFrom(utils,read.csv)
