add httr and jsonlite to documentation for API data access

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,9 @@ import(keyring)
 import(lifecycle)
 import(tidyr)
 importFrom(data.table,data.table)
+importFrom(httr,GET)
+importFrom(httr,content)
+importFrom(jsonlite,fromJSON)
 importFrom(odbc,odbc)
 importFrom(stats,aggregate)
 importFrom(utils,read.csv)
