--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -29,6 +29,8 @@ navbar:
     news:
      text: Release Notes
      menu:
+      - text: "crabpack 1.0.0"
+        href: "https://github.com/afsc-shellfish-assessment-program/crabpack/releases/tag/v1.0.0"
       - text: "crabpack 0.0.9000"
         href: "https://github.com/AFSC-Shellfish-Assessment-Program/crabpack/releases/tag/v0.0.9000"
 
